--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "izushi",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
     "mongoose": "^8.8.0",
